--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ fastjsonschema==2.21.1
 Flask==3.1.1
 fonttools==4.58.0
 fqdn==1.5.1
+greenlet==3.2.2
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -103,6 +104,7 @@ setuptools==80.8.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
+SQLAlchemy==2.0.41
 stack-data==0.6.3
 terminado==0.18.1
 threadpoolctl==3.6.0
