--- a/requirements.txt
+++ b/requirements.txt
@@ -94,6 +94,7 @@ pywin32==310
 pywinpty==2.0.15
 PyYAML==6.0.2
 pyzmq==26.4.0
+RapidFuzz==3.13.0
 referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
