--- a/requirements.txt
+++ b/requirements.txt
@@ -89,7 +89,7 @@ PyJWT==2.10.1
 PyNaCl==1.5.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
+python-dotenv==1.0.1
 python-json-logger==3.3.0
 pytz==2025.2
 pywin32==310
@@ -129,3 +129,6 @@ websocket-client==1.8.0
 Werkzeug==3.1.3
 wrapt==1.17.2
 xgboost==3.0.2
+Flask-Limiter==3.12
+Flask-WTF==1.2.2
+Flask-Migrate==4.1.0
